--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -1,9 +1,9 @@
-#Sat Nov 13 17:34:11 CET 2010
+#Mon Jul 18 17:06:34 CEST 2011
 eclipse.preferences.version=1
 org.eclipse.cdt.core.formatter.alignment_for_arguments_in_method_invocation=16
 org.eclipse.cdt.core.formatter.alignment_for_base_clause_in_type_declaration=80
 org.eclipse.cdt.core.formatter.alignment_for_compact_if=0
-org.eclipse.cdt.core.formatter.alignment_for_conditional_expression=80
+org.eclipse.cdt.core.formatter.alignment_for_conditional_expression=16
 org.eclipse.cdt.core.formatter.alignment_for_declarator_list=16
 org.eclipse.cdt.core.formatter.alignment_for_enumerator_list=48
 org.eclipse.cdt.core.formatter.alignment_for_expression_list=0
@@ -23,7 +23,7 @@ org.eclipse.cdt.core.formatter.continuation_indentation_for_array_initializer=2
 org.eclipse.cdt.core.formatter.format_guardian_clause_on_one_line=false
 org.eclipse.cdt.core.formatter.indent_access_specifier_compare_to_type_header=false
 org.eclipse.cdt.core.formatter.indent_body_declarations_compare_to_access_specifier=true
-org.eclipse.cdt.core.formatter.indent_body_declarations_compare_to_namespace_header=false
+org.eclipse.cdt.core.formatter.indent_body_declarations_compare_to_namespace_header=true
 org.eclipse.cdt.core.formatter.indent_breaks_compare_to_cases=true
 org.eclipse.cdt.core.formatter.indent_declaration_compare_to_template_header=false
 org.eclipse.cdt.core.formatter.indent_empty_lines=false
