Updated gitignore to add docs/html

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,11 @@ a.out
 *.dylib
 *.dll
 test/SylphTestExe
+test/SylphTestExe.exe
+Default/**
+
+# Generated documenation
+docs/html/**
 
 # Backup and patch files
 *~
