Expanded implementation of List and added testcase skeleton.

--- a/.project
+++ b/.project
@@ -36,7 +36,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildLocation</key>
-					<value>${workspace_loc:/sylph/Default}</value>
+					<value>${workspace_loc:/sylph/}</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.cleanBuildTarget</key>
