Big rewrite of build system (everyone should merge SeySayux/master).

--- a/deps/gtest/CMakeLists.txt
+++ b/deps/gtest/CMakeLists.txt
@@ -44,8 +44,8 @@ endif()
 # cmake_minimum_required(VERSION 2.6.2)
 
 # Adapted for LibSylph
-set(gtest_SOURCE_DIR ${SYLPH_SOURCE_DIR}/deps/gtest)
-set(gtest_BINARY_DIR ${SYLPH_BINARY_DIR}/deps/gtest)
+set(gtest_SOURCE_DIR ${CMAKE_SOURCE_DIR}/deps/gtest)
+set(gtest_BINARY_DIR ${CMAKE_BINARY_DIR}/deps/gtest)
 
 if (COMMAND set_up_hermetic_build)
   set_up_hermetic_build()
