--- a/SylphConfig.cmake.in
+++ b/SylphConfig.cmake.in
@@ -15,7 +15,7 @@ set(SYLPH_LIBRARIES Sylph)
 
 macro(target_enable_sylph target)
     get_target_property(cf ${target} COMPILE_FLAGS)
-    if(${cf} STREQUAL "NOTFOUND")
+    if(${cf} STREQUAL "cf-NOTFOUND")
         set_target_properties(${target} PROPERTIES 
                 COMPILE_FLAGS "${SYLPH_CXXFLAGS}")
     else()
@@ -30,7 +30,8 @@ macro(target_enable_sylph target)
 endmacro()
 
 macro(target_enable_sylph_flags target flags)
-    if(${cf} STREQUAL "NOTFOUND")
+    get_target_property(cf ${target} COMPILE_FLAGS)
+    if(${cf} STREQUAL "cf-NOTFOUND")
         set_target_properties(${target} PROPERTIES 
                 COMPILE_FLAGS "${flags}")
     else()
